--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13",
+    "vue-i18n": "^10.0.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.0",
@@ -17,6 +19,7 @@
     "eslint": "^9.16.0",
     "eslint-plugin-format": "^0.1.3",
     "typescript": "~5.6.2",
+    "unplugin-auto-import": "^0.19.0",
     "vite": "^6.0.1",
     "vue-tsc": "^2.1.10"
   }
