--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.0",
+    "@types/node": "^22.10.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "eslint": "^9.16.0",
     "eslint-plugin-format": "^0.1.3",
+    "less": "^4.2.1",
     "typescript": "~5.6.2",
     "unplugin-auto-import": "^0.19.0",
     "vite": "^6.0.1",
