--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
-    "vue-i18n": "^10.0.5"
+    "vue-i18n": "^10.0.5",
+    "vuetify": "^3.7.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.0",
@@ -23,6 +25,7 @@
     "typescript": "~5.6.2",
     "unplugin-auto-import": "^0.19.0",
     "vite": "^6.0.1",
+    "vite-plugin-vuetify": "^2.0.4",
     "vue-tsc": "^2.1.10"
   }
 }
