--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint": "^9.16.0",
     "eslint-plugin-format": "^0.1.3",
     "less": "^4.2.1",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
     "typescript": "~5.6.2",
     "unplugin-auto-import": "^0.19.0",
     "vite": "^6.0.1",
