--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -29,6 +32,7 @@
     "unplugin-auto-import": "^0.19.0",
     "vite": "^6.0.1",
     "vite-plugin-vuetify": "^2.0.4",
+    "vitest": "^2.1.8",
     "vue-tsc": "^2.1.10"
   }
 }
