--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "test": "vitest",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -21,18 +23,33 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.0",
+    "@chromatic-com/storybook": "^3.2.3",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/test": "^8.4.7",
+    "@storybook/vue3": "^8.4.7",
+    "@storybook/vue3-vite": "^8.4.7",
     "@types/node": "^22.10.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "eslint": "^9.16.0",
     "eslint-plugin-format": "^0.1.3",
+    "eslint-plugin-storybook": "^0.11.1",
     "less": "^4.2.1",
     "sass": "^1.83.0",
     "sass-loader": "^16.0.4",
+    "storybook": "^8.4.7",
     "typescript": "~5.6.2",
     "unplugin-auto-import": "^0.19.0",
     "vite": "^6.0.1",
     "vite-plugin-vuetify": "^2.0.4",
     "vitest": "^2.1.8",
     "vue-tsc": "^2.1.10"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
